
# find ExrBase headers & OIIO headers and libs
# If they're found then build the OIIO texture sample plugin

SET(OIIO_INSTALL /Users/dboogert/work/oiio/dist/macosx)
SET(EXRBASE_INSTALL /opt/local)

FIND_PATH(OIIO_INCLUDE_DIR OpenImageIO/texture.h PATHS ${OIIO_INSTALL}/include)
FIND_LIBRARY(OIIO_LIBRARY libOpenImageIO.dylib PATHS ${OIIO_INSTALL}/lib)
GET_FILENAME_COMPONENT(OIIO_LIBRARY_PATH ${OIIO_LIBRARY} PATH)

FIND_PATH(EXRBASE_INCLUDE_DIR OpenExr/ImathVec.h PATHS ${EXRBASE_INSTALL}/include)

MESSAGE(STATUS "EXR include: " ${EXRBASE_INCLUDE_DIR})
MESSAGE(STATUS "OIIO include: " ${OIIO_INCLUDE_DIR})
MESSAGE(STATUS "OIIO lib: " ${OIIO_LIBRARY_PATH})
 
INCLUDE_DIRECTORIES(${OIIO_INCLUDE_DIR} ${EXRBASE_INCLUDE_DIR})
LINK_DIRECTORIES(${OIIO_LIBRARY_PATH})
 
ADD_LIBRARY (OIIOTexture SHARED texture.cpp)
TARGET_LINK_LIBRARIES(OIIOTexture ${SEEXPR_LIBRARIES} OpenImageIO)
SET_TARGET_PROPERTIES(OIIOTexture PROPERTIES OUTPUT_NAME "OIIOTexture" PREFIX "SeExpr" SUFFIX ".so")

INSTALL (TARGETS OIIOTexture  DESTINATION plugins)

